--- a/ImageFilterApp/MainWindow.xaml
+++ b/ImageFilterApp/MainWindow.xaml
@@ -48,6 +48,11 @@
         <Button x:Name="apply_button" Content="Apply" HorizontalAlignment="Left" Margin="669,266,0,0" VerticalAlignment="Top" Width="88" Click="Apply_Function"/>
         <Button x:Name="undoAll_button" Content="Undo all" HorizontalAlignment="Left" Margin="669,316,0,0" VerticalAlignment="Top" Width="88" Click="UndoAll_Click"/>
         <Button x:Name="grey_Button" Content="Gray scale convertion" HorizontalAlignment="Left" Margin="483,266,0,0" VerticalAlignment="Top" Width="130" Click="Grey_Click"/>
-        <Button x:Name="Average_dithering_button" Content="Average dithering" HorizontalAlignment="Left" Margin="483,291,0,0" VerticalAlignment="Top" Width="130" Click="Dithering_Click"/>
+        <Button x:Name="Average_dithering_button" Content="Average dithering" HorizontalAlignment="Left" Margin="483,302,0,0" VerticalAlignment="Top" Width="130" Click="Dithering_Click"/>
+        <Slider x:Name="slValue" Maximum="255" TickPlacement="BottomRight" TickFrequency="5" IsSnapToTickEnabled="True" Margin="483,380,179,10" />
+        <TextBox Text="{Binding ElementName=slValue, Path=Value, UpdateSourceTrigger=PropertyChanged}"  TextAlignment="Left" Margin="618,380,134,10" />
+        <Button x:Name="Median_Cut" Content="Median cut" HorizontalAlignment="Left" Margin="483,355,0,0" VerticalAlignment="Top" Width="130" Click="MedCut_Click"/>
+        <Slider x:Name="slValue_Dither" Maximum="255" TickPlacement="BottomRight" TickFrequency="1" IsSnapToTickEnabled="True" Margin="483,327,179,63" />
+        <TextBox Text="{Binding Value, ElementName=slValue_Dither, UpdateSourceTrigger=PropertyChanged}"  TextAlignment="Left" Margin="618,327,134,63" />
     </Grid>
 </Window>
