--- a/ImageFilterApp/MainWindow.xaml
+++ b/ImageFilterApp/MainWindow.xaml
@@ -54,5 +54,6 @@
         <Button x:Name="Median_Cut" Content="Median cut" HorizontalAlignment="Left" Margin="483,355,0,0" VerticalAlignment="Top" Width="130" Click="MedCut_Click"/>
         <Slider x:Name="slValue_Dither" Maximum="255" TickPlacement="BottomRight" TickFrequency="1" IsSnapToTickEnabled="True" Margin="483,327,179,63" />
         <TextBox Text="{Binding Value, ElementName=slValue_Dither, UpdateSourceTrigger=PropertyChanged}"  TextAlignment="Left" Margin="618,327,134,63" />
+        <Button x:Name="Complex_Blur_button" Content="Complex Blur" HorizontalAlignment="Left" Margin="136,364,0,0" VerticalAlignment="Top" Width="130" Click="Lab1_Click"/>
     </Grid>
 </Window>
